Problem was expired API due to end of free trial

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,13 @@
         android:label="favorite_places"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <!-- Google Maps API Key -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAp-HDS4JA3SB-FcwSM4zCVrGwywxKCpCI"/>
+        
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
