--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   flutter_riverpod: ^2.5.1
   image_picker: ^1.1.2
   location: ^7.0.0
+  http: ^1.2.2
+  google_maps_flutter: ^2.7.0
+  path_provider: ^2.1.3
+  path: ^1.9.0
+  sqflite: ^2.3.3+1
+  firebase_messaging: ^15.0.3
 
 dev_dependencies:
   flutter_test:
